초기화 프로젝트 1개로 변경